--- a/Social Feed/Base.lproj/Main.storyboard
+++ b/Social Feed/Base.lproj/Main.storyboard
@@ -139,16 +139,44 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iSF-SM-I94">
-                                <frame key="frameInset" minX="160" minY="318" width="55" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Log Out"/>
-                                <connections>
-                                    <action selector="logOutBtnTapped:" destination="KJp-yz-Bh8" eventType="touchUpInside" id="Fib-sn-1JL"/>
-                                </connections>
-                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r58-5f-6Ur">
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iSF-SM-I94">
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="22" id="8qW-xK-Rbn"/>
+                                            <constraint firstAttribute="width" constant="22" id="aBQ-IN-c3a"/>
+                                        </constraints>
+                                        <state key="normal" image="Logout Rounded Left"/>
+                                        <connections>
+                                            <action selector="logOutBtnTapped:" destination="KJp-yz-Bh8" eventType="touchUpInside" id="Fib-sn-1JL"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Social Feed" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aLn-2S-0tU">
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="CZ6-Bl-WlT"/>
+                                            <constraint firstAttribute="width" constant="156" id="KWE-LJ-PQu"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="NexaBold" family="Nexa Bold" pointSize="22"/>
+                                        <color key="textColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.93333333333333335" green="0.93333333333333335" blue="0.93333333333333335" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="iSF-SM-I94" secondAttribute="bottom" constant="8" id="20a-W1-t6t"/>
+                                    <constraint firstItem="aLn-2S-0tU" firstAttribute="centerX" secondItem="r58-5f-6Ur" secondAttribute="centerX" id="Ew9-IY-OMa"/>
+                                    <constraint firstAttribute="height" constant="65" id="Hfx-0x-Mx0"/>
+                                    <constraint firstAttribute="bottom" secondItem="aLn-2S-0tU" secondAttribute="bottom" constant="1" id="fIX-hY-dIr"/>
+                                    <constraint firstItem="iSF-SM-I94" firstAttribute="leading" secondItem="r58-5f-6Ur" secondAttribute="leading" constant="8" id="tu4-ce-SHI"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="r58-5f-6Ur" firstAttribute="leading" secondItem="EU4-kq-7xe" secondAttribute="leading" id="0RV-hE-nNQ"/>
+                            <constraint firstAttribute="trailing" secondItem="r58-5f-6Ur" secondAttribute="trailing" id="Qrt-Vv-WFq"/>
+                            <constraint firstItem="r58-5f-6Ur" firstAttribute="top" secondItem="EU4-kq-7xe" secondAttribute="top" id="ptn-XF-0Q8"/>
+                        </constraints>
                     </view>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="show" identifier="goToSignUp" id="r9d-4V-SJY"/>
@@ -159,4 +187,7 @@
             <point key="canvasLocation" x="960.79999999999995" y="120.98950524737631"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Logout Rounded Left" width="100" height="100"/>
+    </resources>
 </document>
